# Oxylos

./: Cargo.toml
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs
src/commands/: decrypt.rs  encrypt.rs  inbox.rs  mod.rs
src/crypto/: rsa.rs
src/message/: hash.rs  mod.rs  scan.rs  sync.rs
src/storage/: fsio.rs  init.rs  mod.rs  paths.rs
