[package]
name = "oxylos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1", features = ["v4"] }
filetime = "0.2.26"

[dev-dependencies]
tempfile = "3"
